# enterpriseintelligence

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setupstructure.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 365455051ed7_create_organizations_roles_users.py  39d8703ff0b5_create_sources_and_vulnerabilities.py  684afb0c8c71_add_mitre_metadata_fields_to_.py  837408e55466_add_redhat_enrichment_fields_to_.py  905078e87c24_create_scrape_jobs_table.py  90a34578c5c1_add_kev_enrichment_fields_to_.py  9d684da259bc_create_advisories_table.py  a2ed45956a10_create_assets_table.py
app/: main.py
app/core/: config.py  exception_handlers.py  exceptions.py  logging.py  security.py
app/database/: base.py  mongodb.py  postgres.py  sync_session.py
app/models/: __init__.py  advisory.py  asset.py  organization.py  role.py  scrape_job.py  source.py  user.py  vulnerability.py
app/schemas/: advisory.py  asset.py  auth.py  organization.py  role.py  scrape_job.py  search.py  source.py  user.py  vulnerability.py
app/services/: advisory_service.py  asset_service.py  auth_service.py  organization_service.py  role_service.py  scrape_job_service.py  scraping_service.py  search_service.py  source_service.py  user_service.py  vulnerability_service.py
app/tasks/: cleanup_tasks.py  scheduler.py  scrape_tasks.py
app/utils/: helpers.py  pagination.py
docs/: api.md  architecture.md  database.md  deployment.md  security.md
tests/: conftest.py  test_infra_smoke.py
tests/api/: test_assets.py  (+11 more)
(+49 files in other folders)
