[project]
name = "etip"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "motor>=3.6",
    "psycopg2-binary>=2.9",
    "bcrypt>=4.1",
    "pyjwt>=2.9",
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "apscheduler>=3.11.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
